--- a/curso-angular/src/app/app.component.html
+++ b/curso-angular/src/app/app.component.html
@@ -2,3 +2,6 @@
 
 <app-first-component></app-first-component>
 <app-parent-data [user]="user"></app-parent-data>
+
+<app-directives></app-directives>
+<app-if-render></app-if-render>
